AC_INIT([wmnm], [0.1], [dtorrance@piedmont.edu])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_CC
PKG_CHECK_MODULES([x11], [x11])
PKG_CHECK_MODULES([dockapp], [dockapp])
PKG_CHECK_MODULES([glib], [glib-2.0])
PKG_CHECK_MODULES([libnm], [libnm])
PKG_CHECK_MODULES([xft], [xft])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
